[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/SteelIcon.png" type="Texture" id=1]
[ext_resource path="res://Assets/FoodIcon.png" type="Texture" id=2]
[ext_resource path="res://Assets/WoodIcon.png" type="Texture" id=3]
[ext_resource path="res://Assets/SoldierIcon.png" type="Texture" id=4]
[ext_resource path="res://GUI.gd" type="Script" id=5]

[node name="GUI" type="CanvasLayer"]
follow_viewport_enable = true
script = ExtResource( 5 )

[node name="ResourcePanel" type="Panel" parent="."]
margin_right = 300.0
margin_bottom = 420.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ResourcePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 10.0
margin_bottom = -3.05176e-05
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SteelResource" type="HBoxContainer" parent="ResourcePanel/VBoxContainer"]
margin_right = 300.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 50 )
alignment = 1

[node name="SteelIcon" type="TextureRect" parent="ResourcePanel/VBoxContainer/SteelResource"]
margin_left = 103.0
margin_right = 153.0
margin_bottom = 50.0
texture = ExtResource( 1 )

[node name="SteelCounter" type="Label" parent="ResourcePanel/VBoxContainer/SteelResource"]
margin_left = 157.0
margin_top = 18.0
margin_right = 197.0
margin_bottom = 32.0
text = "Steel: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WoodResource" type="HBoxContainer" parent="ResourcePanel/VBoxContainer"]
margin_top = 60.0
margin_right = 300.0
margin_bottom = 110.0
rect_min_size = Vector2( 300, 50 )
alignment = 1

[node name="WoodIcon" type="TextureRect" parent="ResourcePanel/VBoxContainer/WoodResource"]
margin_left = 100.0
margin_right = 150.0
margin_bottom = 50.0
texture = ExtResource( 3 )

[node name="WoodCounter" type="Label" parent="ResourcePanel/VBoxContainer/WoodResource"]
margin_left = 154.0
margin_top = 18.0
margin_right = 199.0
margin_bottom = 32.0
text = "Wood: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FoodResource" type="HBoxContainer" parent="ResourcePanel/VBoxContainer"]
margin_top = 120.0
margin_right = 300.0
margin_bottom = 170.0
rect_min_size = Vector2( 300, 50 )
alignment = 1

[node name="FoodIcon" type="TextureRect" parent="ResourcePanel/VBoxContainer/FoodResource"]
margin_left = 103.0
margin_right = 153.0
margin_bottom = 50.0
texture = ExtResource( 2 )

[node name="FoodCounter" type="Label" parent="ResourcePanel/VBoxContainer/FoodResource"]
margin_left = 157.0
margin_top = 18.0
margin_right = 196.0
margin_bottom = 32.0
text = "Food: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoldierResource" type="HBoxContainer" parent="ResourcePanel/VBoxContainer"]
margin_top = 180.0
margin_right = 300.0
margin_bottom = 230.0
rect_min_size = Vector2( 300, 50 )
alignment = 1

[node name="SoldierIcon" type="TextureRect" parent="ResourcePanel/VBoxContainer/SoldierResource"]
margin_left = 76.0
margin_right = 126.0
margin_bottom = 50.0
texture = ExtResource( 4 )

[node name="TotalSoldier" type="Label" parent="ResourcePanel/VBoxContainer/SoldierResource"]
margin_left = 130.0
margin_top = 18.0
margin_right = 224.0
margin_bottom = 32.0
text = "Total Soldiers: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer6" type="HBoxContainer" parent="ResourcePanel/VBoxContainer"]
margin_top = 240.0
margin_right = 300.0
margin_bottom = 290.0
rect_min_size = Vector2( 300, 50 )
alignment = 1

[node name="HBoxContainer7" type="HBoxContainer" parent="ResourcePanel/VBoxContainer"]
margin_top = 300.0
margin_right = 300.0
margin_bottom = 350.0
rect_min_size = Vector2( 300, 50 )
alignment = 1

[node name="HBoxContainer8" type="HBoxContainer" parent="ResourcePanel/VBoxContainer"]
margin_top = 360.0
margin_right = 300.0
margin_bottom = 410.0
rect_min_size = Vector2( 300, 50 )
alignment = 1

[node name="InfoPanel" type="Panel" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -600.0
margin_top = -300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="InfoPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildingIcon" type="TextureRect" parent="InfoPanel/GridContainer"]
margin_right = 67.0
margin_bottom = 50.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildingName" type="Label" parent="InfoPanel/GridContainer"]
margin_left = 77.0
margin_top = 18.0
margin_right = 157.0
margin_bottom = 32.0
text = "Tower Name"

[node name="BuildingSoldier" type="Label" parent="InfoPanel/GridContainer"]
margin_top = 60.0
margin_right = 67.0
margin_bottom = 74.0
text = "Soldiers: 0"

[node name="Empty" type="Control" parent="InfoPanel/GridContainer"]
margin_left = 77.0
margin_top = 60.0
margin_right = 157.0
margin_bottom = 74.0

[node name="BuildingSteel" type="Label" parent="InfoPanel/GridContainer"]
margin_top = 84.0
margin_right = 67.0
margin_bottom = 98.0
text = "Steel: 0"

[node name="Empty2" type="Control" parent="InfoPanel/GridContainer"]
margin_left = 77.0
margin_top = 84.0
margin_right = 157.0
margin_bottom = 98.0

[node name="BuildingWood" type="Label" parent="InfoPanel/GridContainer"]
margin_top = 108.0
margin_right = 67.0
margin_bottom = 122.0
text = "Wood: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionPanel" type="Panel" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -125.0
margin_bottom = 125.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ActionPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upgrades" type="Button" parent="ActionPanel/VBoxContainer"]
margin_top = 10.0
margin_right = 100.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 70 )
text = "Upgreyds"

[node name="Resource Priority" type="Button" parent="ActionPanel/VBoxContainer"]
margin_top = 90.0
margin_right = 100.0
margin_bottom = 160.0
rect_min_size = Vector2( 100, 70 )
text = "ResourcePrio"

[node name="Food" type="Button" parent="ActionPanel/VBoxContainer"]
margin_top = 170.0
margin_right = 100.0
margin_bottom = 240.0
rect_min_size = Vector2( 100, 70 )
text = "Give Food"
